# dj-notification-api

./: .pre-commit-config-ci.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENCE  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
django_notification/: apps.py
django_notification/admin/: __init__.py  deleted_notification.py  notification.py
django_notification/api/filters/: notification_filter.py
django_notification/api/paginations/: limit_offset_pagination.py
django_notification/api/routers/: notification.py
django_notification/api/serializers/: __init__.py  dynamic_notification.py  group.py  notification.py  simple_notification.py  user.py
django_notification/api/serializers/helper/: get_serializer_cls.py
django_notification/api/throttlings/: role_base_throttle.py
django_notification/api/views/: activity.py  notification.py
django_notification/constants/: default_settings.py  qs_types.py
django_notification/decorators/: action.py
django_notification/migrations/: 0001_initial.py  0002_alter_deletednotification_deleted_at_and_more.py
django_notification/mixins/: __init__.py  admin_permission.py  config_api_attrs.py  disable_api_methods.py  read_only_admin.py
django_notification/models/: __init__.py  deleted_notification.py  notification.py  notification_recipient.py  notification_seen.py
django_notification/models/helper/enums/: status_choices.py
django_notification/models/permissions/: notification_permission.py
django_notification/repository/manager/: notification.py
django_notification/repository/queryset/: notification.py
django_notification/settings/: checks.py  conf.py
django_notification/tests/: conftest.py  setup.py  urls.py
django_notification/tests/admin/: test_deleted_notification_admin.py  test_notification_admin.py
django_notification/tests/api/: __init__.py
django_notification/tests/api/paginations/: test_limit_offset_pagination.py
django_notification/tests/api/serializers/: test_group.py  test_notification_dynamic_serializer.py  test_simple_notification_serializer.py
django_notification/tests/api/throttlings/: test_role_base_throttle.py
django_notification/tests/api/views/: test_activity.py  test_notification.py
django_notification/tests/decorators/: test_action.py
django_notification/tests/fixtures/: __init__.py  notification.py  user.py
django_notification/tests/models/: test_deleted_notification.py  test_notification.py  test_notification_recipient.py  test_notification_seen.py
django_notification/tests/repository/: test_notification_manager.py  test_queryset.py
django_notification/tests/settings/: test_checks.py  test_conf.py
django_notification/tests/utils/: test_title_generator.py
django_notification/tests/validators/: test_config_validators.py
django_notification/utils/: action_decorator.py  get_model_fields.py  user_model.py
django_notification/utils/serialization/: __init__.py  field_filters.py  notif_title_generator.py
django_notification/validators/: config_validators.py
docs/: api_guide.rst  conf.py  contributing.rst  index.rst  quick_start.rst  roles.rst  settings.rst  usage.rst
